--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ProtoMKMC",
   "version": "0.0.1",
-  "description": "Prototype for testing Maven-Karma-Mocha-Chai autotesting workflow",
+  "description": "Prototype for testing Maven-Karma-Mocha-Chai auto-testing work flow",
   "repository": {
     "type": "git",
     "url": "https://github.com/alexscg/ProtoMKMC.git"
@@ -11,5 +11,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alex Shapiro",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^1.9.2",
+    "chai-jquery": "^2.0.0",
+    "karma": "^0.12.24",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.3",
+    "karma-cli": "0.0.4",
+    "karma-html-reporter": "^0.2.4",
+    "karma-jshint": "^0.1.0",
+    "karma-mocha": "^0.1.9",
+    "karma-mocha-reporter": "^0.3.1",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
+    "karma-sinon": "^1.0.3",
+    "mocha": "^1.21.4",
+    "requirejs": "^2.1.15",
+    "sinon": "^1.10.3",
+    "sinon-chai": "^2.6.0"
+  }
 }
